#266 - styling document page with new UI

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1,5 +1,8 @@
 .bb-activity-media-wrap {
-	display: flex;
+	display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
 	flex-flow: row wrap;
 	margin: 0 -3px;
 	align-items: flex-start;
@@ -764,41 +767,6 @@ body.bb-model-open {
 	span.bb-sep {
 		margin: 0 5px;
 	}
-	.document-breadcrumb{
-		list-style: none;
-		margin: 0;
-		text-align: left;
-		li{
-			display: inline-block;
-			font-weight: 600;
-			vertical-align: middle;
-			color: #939597;
-			&:after{
-				content: "\f345";
-				font-family: dashicons;
-				font-size: 20px;
-				vertical-align: middle;
-				font-size: 15px;
-				margin-right: 6px;
-				margin-left: 6px;
-				color: inherit;
-				font-weight: 400;
-			}
-			&:last-child{
-				a{
-					color: #393e41;
-					font-weight: bold;
-				}
-				&:after{
-					display: none;
-				}
-			}
-			a{
-				color: #939597;
-				font-weight: normal;
-			}
-		}
-	}
 }
 
 .bb-album-photos-list {
@@ -1459,12 +1427,57 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		font-size: 14px;
 	}
 }
-
+#media-folder-document-data-table .document-data-table-head{
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	border-bottom: 1px solid #E7E9EC;
+	padding: 0 0 8px;
+	.data-head{
+		font-size: 12px;
+		color: #939597;
+		span{
+			cursor: pointer;
+			user-select: none;
+			text-transform: uppercase;
+		}
+		i{
+			font-size: 8px;
+			-webkit-transform: rotate(180deg) translateY(1px);
+			-ms-transform: rotate(180deg) translateY(1px);
+			transform: rotate(180deg) translateY(1px);
+			transition: all ease 0.3s;
+		}
+		&.asce{
+			i{
+				-webkit-transform: rotate(0deg) translateY(-1px);
+				-ms-transform: rotate(0deg) translateY(-1px);
+				transform: rotate(0deg) translateY(-1px);
+			}
+		}
+	}
+	.data-head-name{
+		-ms-flex-preferred-size: calc(60% - 50px);
+    	flex-basis: calc(60% - 50px);
+	}
+	.data-head-modified{
+		-ms-flex-preferred-size: 20%;
+    	flex-basis: 20%;
+	}
+	.data-head-visibility{
+		-ms-flex-preferred-size: 20%;
+    	flex-basis: 20%;
+	}
+}
 #media-folder-document-data-table .media-folder_items{
 	margin: 0;
 	border-bottom: 1px solid #E7E9EC;
 	padding: 15px 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: center;
+    -ms-flex-align: center;
 	align-items: center;
 	&:last-child{
 		border-bottom: 0;
@@ -1490,9 +1503,20 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			}
 		}
 	}
+	.media-folder_visibility,
+	.media-folder_modified{
+		-ms-flex-preferred-size: 20%;
+    	flex-basis: 20%;
+	}
 	.media-folder_details{
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-basis: calc(100% - 125px);
+		-ms-flex-preferred-size: calc(+60% - 100px);
+    	flex-basis: calc(60% - 100px);
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-flow: column;
 		flex-flow: column;
 		.media-folder_name{
 			color: #122B46;
@@ -1503,7 +1527,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		.media-folder_name_edit{
 			height: 32px;
 			display: none;
-			margin-bottom: 8px;
+			margin: 0 8px 8px 0;
 		}
 	}
 	.media-folder_details__bottom{
@@ -1531,9 +1555,16 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		}
 	}
 	.media-folder_actions{
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		-webkit-box-align: center;
+    	-ms-flex-align: center;
+        align-items: center;
+		-webkit-box-pack: center;
+    	-ms-flex-pack: center;
+        justify-content: center;
+		-ms-flex-preferred-size: 55px;
 		flex-basis: 55px;
 		position: relative;
 		.media-folder_action__anchor{
@@ -1614,8 +1645,13 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		}
 	}
 	@media screen and (max-width: 460px){
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
-		align-items: flex-start;
+		-webkit-box-align: start;
+   		-ms-flex-align: start;
+        align-items: flex-start;
 		position: relative;
 		.media-folder_icon{
 			flex-basis: auto;
@@ -1636,47 +1672,6 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					right: 9px;
 				}
 			}
-		}
-	}
-}
-
-.media-folder-document-filters{
-	display: inline-block;
-    width: calc(100% + 40px);
-    margin: 0 -20px;
-    padding: 0 20px 15px;
-    border-bottom: 1px solid #E7E9EC;
-	.media-search-form {
-		background-color: #fff;
-		border: 1px solid #DEDFE2;
-		border-radius: 100px;
-		margin-bottom: 0;
-		position: relative;
-		float: left;
-		input[type=text] {
-			background: transparent;
-			border-radius: 100px;
-			border: 0;
-			height: 34px;
-			font-size: 14px;
-			letter-spacing: -0.24px;
-			padding: 0 30px 0 35px;
-		}
-	}
-	.select-wrap{
-		float: right;
-		select{
-			-moz-appearance: menulist;
-			-webkit-appearance: menulist;
-			-o-appearance: menulist;
-			appearance: menulist;
-		}
-	}
-	@media screen and (max-width: 640px){
-		.media-search-form,
-		.select-wrap{
-			float: none;
-			margin-bottom: 10px;
 		}
 	}
 }
@@ -1704,19 +1699,74 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		.bb-media-actions-wrap{
 			float: none;
 			margin-bottom: 10px;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			-ms-flex-direction: column;
 			flex-direction: column;
 			.bb-media-actions a{
 				width: 100%;
 			}
 		}
 	}
+	.media-search-form {
+		background-color: #fff;
+		border: 1px solid #DEDFE2;
+		border-radius: 100px;
+		margin-bottom: 0;
+		position: relative;
+		display: inline-block;
+		input[type=text] {
+			background: transparent;
+			border-radius: 100px;
+			border: 0;
+			height: 34px;
+			width: 215px;
+			font-size: 14px;
+			letter-spacing: -0.24px;
+			padding: 0 30px 0 35px;
+		}
+		&:after{
+			content: '\e81f';
+			font-family: bb-icons;
+			display: inline-block;
+			color: #4d5c6d;
+			opacity: .4;
+			position: absolute;
+			left: 12px;
+			top: 10px;
+			line-height: 1;
+			font-size: 16px;
+		}
+	}
+}
+.bp-document-listing{
+	.media-search-form{
+		float: right;
+	}
+}
+@media screen and (max-width: 1120px){
+	.bp-media-header-wrap{
+		.media-search-form{
+			width: 100%;
+			margin: 5px 0;
+			input[type=text]{
+				width: 100%;
+			}
+		}
+		.album-actions-wrap,
+		.bb-media-actions-wrap{
+			margin: 5px 0 !important;
+		}
+	}
 }
 #bp-media-single-folder{
 	.album-single-view .bp-media-header-wrap{
 		.bb-single-album-header{
-			float: left;
 			padding: 0;
-			width: 40%;
+			width: 30%;
+			-webkit-flex-basis: 30%;
+			-ms-flex-preferred-size: 30%;
+			flex-basis: 30%;
 			.bb-title{
 				max-width: 100%;
 				overflow: hidden;
@@ -1727,7 +1777,11 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			}
 		}
 		.bb-media-actions{
-			float: right;
+			width: 70%;
+			-webkit-flex-basis: 70%;
+			-ms-flex-preferred-size: 70%;
+			flex-basis: 70%;
+			text-align: right;
 			&>a{
 				margin-left: 10px;
 				&>i{
@@ -1739,15 +1793,62 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 				height: 34px;
 				font-size: 14px;
 			}
+			*:not(.button){
+				text-align: left;
+			}
 		}
 	}
 	.bp-media-header-wrap{
 		margin-bottom: 15px;
 		display: inline-block;
 		width: 100%;
+		width: calc(100% + 40px);
+		margin: 0 -20px;
+		padding: 0 20px 15px;
+		.bp-media-header-wrap-inner{
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+		}
+		.document-breadcrumb{
+			list-style: none;
+			margin: 10px 0 0 0;
+			text-align: left;
+			li{
+				display: inline-block;
+				font-weight: 600;
+				vertical-align: middle;
+				color: #939597;
+				&:after{
+					content: "\f345";
+					font-family: dashicons;
+					font-size: 20px;
+					vertical-align: middle;
+					font-size: 15px;
+					margin-right: 6px;
+					margin-left: 6px;
+					color: inherit;
+					font-weight: 400;
+				}
+				&:last-child{
+					a{
+						color: #393e41;
+						font-weight: bold;
+					}
+					&:after{
+						display: none;
+					}
+				}
+				a{
+					color: #939597;
+					font-weight: normal;
+				}
+			}
+		}
 		.media-folder_items{
 			display: inline-block;
 			position: relative;
+			text-align: left;
 			.media-folder_action__anchor{
 				display: inline-block;
 				position: relative;
@@ -1844,12 +1945,25 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	@media screen and (max-width: 1120px){
 		.album-single-view{
 			.bp-media-header-wrap {
+				.bp-media-header-wrap-inner{
+					-webkit-box-orient: vertical;
+					-webkit-box-direction: normal;
+					-webkit-flex-direction: column;
+					-ms-flex-direction: column;
+					flex-direction: column;
+				}
 				.bb-single-album-header{
 					width: 100%;
+					-webkit-flex-basis: 100%;
+					-ms-flex-preferred-size: 100%;
+					flex-basis: 100%;
 				}
 				.bb-media-actions{
 					float: left;
 					width: 100%;
+					-webkit-flex-basis: 100%;
+					-ms-flex-preferred-size: 100%;
+					flex-basis: 100%;
 					position: relative;
 					padding-right: 25px;
 					margin-top: 15px;
@@ -1867,7 +1981,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					}
 				}
 			}
-		}
+		}		
 	}
 
 	@media screen and (max-width: 640px){
