--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1943,20 +1943,16 @@ blockquote.wp-embedded-content > p:first-child > a:hover {
   padding: 1em 0 0;
 }
 
-.buddypress-wrap .activity-comments ul li ul {
-  margin-left: 5%;
-}
-
-.buddypress-wrap .activity-comments ul li ul li.detached-comment-item {
-  margin-left: -5%;
-}
-
 .buddypress-wrap .activity-comments ul li:first-child {
   border-top: 0;
 }
 
 .buddypress-wrap .activity-comments ul li:last-child {
   margin-bottom: 0;
+}
+
+.buddypress-wrap .activity-comments > ul > li > ul {
+  margin-left: 5%;
 }
 
 .buddypress-wrap .activity-comments div.acomment-avatar {
@@ -11020,11 +11016,19 @@ ul.bb-albums-list .bb-more-photos strong {
 
 .bb-media-model-inner .gif-media-search-dropdown.open {
   width: 300px;
-  left: -60px;
+  left: -20px;
+}
+
+.comment-item .bb-media-model-inner ul .gif-media-search-dropdown.open {
+  left: -80px;
 }
 
 .bb-media-model-inner .gif-media-search-dropdown:before {
-  left: 80px;
+  left: 40px;
+}
+
+.comment-item .bb-media-model-inner ul .gif-media-search-dropdown:before {
+  left: 100px;
 }
 
 .bb-media-model-inner .emojionearea .emojionearea-picker.emojionearea-picker-position-bottom {
