--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1468,6 +1468,45 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		-ms-flex-preferred-size: 20%;
     	flex-basis: 20%;
 	}
+	@media screen and (max-width: 540px){
+		-webkit-box-pack: end;
+        -ms-flex-pack: end;
+		justify-content: flex-end;
+		padding: 10px 0;
+		&:before{
+			content: 'Sort By:';
+			position: absolute;
+			left: 25px;
+			font-size: 14px;
+		}
+		.data-head-name,
+		.data-head-modified,
+		.data-head-visibility{
+			-ms-flex-preferred-size: auto;
+			flex-basis: auto;
+			padding-right: 15px;
+		}
+		.data-head-visibility{
+			padding-right: 0;
+		}
+	}
+	@media screen and (max-width: 360px){
+		&:before{
+			font-size: 12px;
+		}
+		.data-head-name,
+		.data-head-modified,
+		.data-head-visibility{
+			padding-right: 7px;
+			font-size: 10px;
+			i{
+				font-size: 6px;
+				-webkit-transform: rotate(180deg) translateY(2px);
+				-ms-transform: rotate(180deg) translateY(2px);
+				transform: rotate(180deg) translateY(2px)
+			}
+		}
+	}
 }
 #media-folder-document-data-table .media-folder_items{
 	margin: 0;
@@ -1513,13 +1552,17 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		display: -ms-flexbox;
 		display: flex;
 		-ms-flex-preferred-size: calc(+60% - 100px);
-    	flex-basis: calc(60% - 100px);
+		flex-basis: calc(60% - 100px);
+		width: calc(60% - 100px);
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
 		-ms-flex-flow: column;
 		flex-flow: column;
 		.media-folder_name{
 			color: #122B46;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 			& > span {
 				white-space: pre;
 			}
@@ -1532,26 +1575,17 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 	}
 	.media-folder_details__bottom{
 		display: block;
-		font-size: 13px;
-		color: #939597;
+		font-size: 14px;
 		line-height: 1.3;
+		color: #4D5C6D;
 		.media-folder_date{
 			display: inline-block;
 			vertical-align: middle;
 		}
 		.media-folder_author{
-			margin-left: 3px;
-			display: inline-block;
-			&:before{
-				content: '';
-				height: 4px;
-				width: 4px;
-				background-color: #c8cbcf;
-				display: inline-block;
-				border-radius: 100%;
-				vertical-align: middle;
-				margin-right: 6px;
-			}
+			display: block;
+			font-size: 13px;
+			color: #939597;
 		}
 	}
 	.media-folder_actions{
@@ -1644,7 +1678,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			}
 		}
 	}
-	@media screen and (max-width: 460px){
+	@media screen and (max-width: 540px){
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
 		-ms-flex-direction: column;
@@ -1660,6 +1694,14 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			img{
 				width: 100%;
 			}
+		}
+		.media-folder_details{
+			-ms-flex-preferred-size: 100%;
+			flex-basis: 100%;
+			width: 100%;
+		}
+		.media-folder_modified{
+			margin-bottom: 5px;
 		}
 		.media-folder_actions{
 			position: absolute;
@@ -1685,6 +1727,25 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 		margin-left: 10px;
 		.bb-media-actions a i{
 			margin-right: 6px;
+		}
+	}
+	@media screen and (max-width: 1440px){
+		h2{
+			width: 100%;
+		}
+	}
+	@media screen and (max-width: 1220px){
+		.bb-media-actions-wrap,
+		.media-search-form{
+			width: 100%;
+			margin-bottom: 10px !important;
+			input[type=text]{
+				width: 100% !important;
+			}
+			.bb-media-actions,
+			a.button{
+				width: 100%;
+			}
 		}
 	}
 	@media screen and (max-width: 782px){
@@ -1795,6 +1856,36 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 			}
 			*:not(.button){
 				text-align: left;
+			}
+		}
+		@media screen and (max-width: 1480px){
+			.bp-media-header-wrap-inner{
+				webkit-box-orient: vertical;
+        		-webkit-box-direction: normal;
+            	-ms-flex-direction: column;
+				flex-direction: column;
+				position: relative;
+			}
+			.bb-single-album-header{
+				margin-bottom: 10px;
+			}
+			.bb-single-album-header,
+			.bb-media-actions{
+				width: 100%;
+				-webkit-flex-basis: 30%;
+				-ms-flex-preferred-size: 30%;
+				flex-basis: 100%;
+			}
+		}
+		@media screen and (max-width: 1220px){
+			.bb-media-actions .media-folder_items{
+				position: absolute;
+				right: 0;
+				top: 3px;
+			}
+			.bb-media-actions > a{
+				width: 100%;
+				margin: 0 0 10px;
 			}
 		}
 	}
@@ -1964,9 +2055,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					-webkit-flex-basis: 100%;
 					-ms-flex-preferred-size: 100%;
 					flex-basis: 100%;
-					position: relative;
 					padding-right: 25px;
-					margin-top: 15px;
 					&>select{
 						float: right;
 					}
@@ -1992,9 +2081,6 @@ body.messages #buddypress #item-body #messages-post-document-uploader,
 					&>a,&>select{
 						width: 100%;
 						margin: 5px 0;
-					}
-					.media-folder_items{
-						top: -46px;
 					}
 				}
 				.bb-single-album-header .bb-title{
