--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12096,6 +12096,51 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   flex-basis: 20%;
 }
 
+@media screen and (max-width: 540px) {
+  #media-folder-document-data-table .document-data-table-head {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    padding: 10px 0;
+  }
+  #media-folder-document-data-table .document-data-table-head:before {
+    content: 'Sort By:';
+    position: absolute;
+    left: 25px;
+    font-size: 14px;
+  }
+  #media-folder-document-data-table .document-data-table-head .data-head-name,
+  #media-folder-document-data-table .document-data-table-head .data-head-modified,
+  #media-folder-document-data-table .document-data-table-head .data-head-visibility {
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    padding-right: 15px;
+  }
+  #media-folder-document-data-table .document-data-table-head .data-head-visibility {
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  #media-folder-document-data-table .document-data-table-head:before {
+    font-size: 12px;
+  }
+  #media-folder-document-data-table .document-data-table-head .data-head-name,
+  #media-folder-document-data-table .document-data-table-head .data-head-modified,
+  #media-folder-document-data-table .document-data-table-head .data-head-visibility {
+    padding-right: 7px;
+    font-size: 10px;
+  }
+  #media-folder-document-data-table .document-data-table-head .data-head-name i,
+  #media-folder-document-data-table .document-data-table-head .data-head-modified i,
+  #media-folder-document-data-table .document-data-table-head .data-head-visibility i {
+    font-size: 6px;
+    -webkit-transform: rotate(180deg) translateY(2px);
+    -ms-transform: rotate(180deg) translateY(2px);
+    transform: rotate(180deg) translateY(2px);
+  }
+}
+
 #media-folder-document-data-table .media-folder_items {
   margin: 0;
   border-bottom: 1px solid #E7E9EC;
@@ -12150,6 +12195,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   display: flex;
   -ms-flex-preferred-size: calc(+60% - 100px);
   flex-basis: calc(60% - 100px);
+  width: calc(60% - 100px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-flow: column;
@@ -12158,6 +12204,9 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name {
   color: #122B46;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name > span {
@@ -12172,9 +12221,9 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom {
   display: block;
-  font-size: 13px;
-  color: #939597;
+  font-size: 14px;
   line-height: 1.3;
+  color: #4D5C6D;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_date {
@@ -12183,19 +12232,9 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author {
-  margin-left: 3px;
-  display: inline-block;
-}
-
-#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author:before {
-  content: '';
-  height: 4px;
-  width: 4px;
-  background-color: #c8cbcf;
-  display: inline-block;
-  border-radius: 100%;
-  vertical-align: middle;
-  margin-right: 6px;
+  display: block;
+  font-size: 13px;
+  color: #939597;
 }
 
 #media-folder-document-data-table .media-folder_items .media-folder_actions {
@@ -12295,7 +12334,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   font-size: 15px;
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 540px) {
   #media-folder-document-data-table .media-folder_items {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -12313,6 +12352,14 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   }
   #media-folder-document-data-table .media-folder_items .media-folder_icon img {
     width: 100%;
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_details {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    width: 100%;
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_modified {
+    margin-bottom: 5px;
   }
   #media-folder-document-data-table .media-folder_items .media-folder_actions {
     position: absolute;
@@ -12339,6 +12386,30 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 
 .bp-media-header-wrap .bb-media-actions-wrap .bb-media-actions a i {
   margin-right: 6px;
+}
+
+@media screen and (max-width: 1440px) {
+  .bp-media-header-wrap h2 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .bp-media-header-wrap .bb-media-actions-wrap,
+  .bp-media-header-wrap .media-search-form {
+    width: 100%;
+    margin-bottom: 10px !important;
+  }
+  .bp-media-header-wrap .bb-media-actions-wrap input[type=text],
+  .bp-media-header-wrap .media-search-form input[type=text] {
+    width: 100% !important;
+  }
+  .bp-media-header-wrap .bb-media-actions-wrap .bb-media-actions,
+  .bp-media-header-wrap .bb-media-actions-wrap a.button,
+  .bp-media-header-wrap .media-search-form .bb-media-actions,
+  .bp-media-header-wrap .media-search-form a.button {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 782px) {
@@ -12456,6 +12527,38 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
 
 #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions *:not(.button) {
   text-align: left;
+}
+
+@media screen and (max-width: 1480px) {
+  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bp-media-header-wrap-inner {
+    webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    position: relative;
+  }
+  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-single-album-header {
+    margin-bottom: 10px;
+  }
+  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-single-album-header,
+  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions {
+    width: 100%;
+    -webkit-flex-basis: 30%;
+    -ms-flex-preferred-size: 30%;
+    flex-basis: 100%;
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions .media-folder_items {
+    position: absolute;
+    right: 0;
+    top: 3px;
+  }
+  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions > a {
+    width: 100%;
+    margin: 0 0 10px;
+  }
 }
 
 #bp-media-single-folder .bp-media-header-wrap {
@@ -12637,9 +12740,7 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
     -webkit-flex-basis: 100%;
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
-    position: relative;
     padding-right: 25px;
-    margin-top: 15px;
   }
   #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions > select {
     float: right;
@@ -12662,9 +12763,6 @@ body.messages #buddypress #item-body #messages-post-document-uploader .dz-previe
   #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions > a, #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions > select {
     width: 100%;
     margin: 5px 0;
-  }
-  #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-media-actions .media-folder_items {
-    top: -46px;
   }
   #bp-media-single-folder .album-single-view .bp-media-header-wrap .bb-single-album-header .bb-title {
     padding-right: 25px;
