--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1198,7 +1198,7 @@ ul.bb-albums-list {
 
 	.gif-media-search-dropdown.open {
 		width: 300px;
-		left: -20px;
+		left: -50px;
 	}
 
 	.comment-item & ul .gif-media-search-dropdown.open {
@@ -1206,7 +1206,7 @@ ul.bb-albums-list {
 	}
 
 	.gif-media-search-dropdown:before {
-		left: 40px;
+		left: 70px;
 	}
 
 	.comment-item & ul .gif-media-search-dropdown:before {
@@ -1214,11 +1214,63 @@ ul.bb-albums-list {
 	}
 
 	.emojionearea .emojionearea-picker.emojionearea-picker-position-bottom {
-		left: -100px;
+		left: -110px;
 	}
 
 	.emojionearea .emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
-		left: 102px;
+		left: 112px;
+	}
+
+	.ac-reply-toolbar.post-media-disabled.post-gif-disabled {
+
+		.emojionearea-picker.emojionearea-picker-position-bottom {
+			left: -28px;
+		}
+
+		.emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
+			left: 30px;
+		}
+	}
+
+	.ac-reply-content .ac-reply-toolbar.post-media-disabled.post-gif-disabled {
+
+		.emojionearea-picker.emojionearea-picker-position-bottom {
+			left: -50px;
+		}
+
+		.emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
+			left: 52px;
+		}
+	}
+
+	.ac-reply-toolbar.post-media-disabled:not(.post-gif-disabled) {
+
+		.emojionearea-picker.emojionearea-picker-position-bottom {
+			left: -80px;
+		}
+
+		.emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
+			left: 82px;
+		}
+
+		.gif-media-search-dropdown.open {
+			left: -30px;
+		}
+
+		.gif-media-search-dropdown:before {
+			left: 50px;
+		}
+	}
+
+	.ac-reply-toolbar.post-gif-disabled:not(.post-media-disabled) {
+
+		.emojionearea-picker.emojionearea-picker-position-bottom {
+			left: -80px;
+		}
+
+		.emojionearea-picker.emojionearea-picker-position-bottom .emojionearea-wrapper:after {
+			left: 82px;
+		}
 	}
 }
 
