#561 - added ability to show particular area of cover photo on profile page

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -282,6 +282,7 @@ body.register .buddypress-wrap .page ul {
 }
 
 #item-header a.link-change-cover-image,
+#item-header a.position-change-cover-image,
 #item-header a.link-change-profile-image {
 	background: rgba(255, 255, 255, 0.9);
 	border-radius: 50%;
@@ -300,6 +301,23 @@ body.register .buddypress-wrap .page ul {
 	@include box-shadow( 0 0 3px 0 rgba(0, 0, 0, 0.2) );
 }
 
+#item-header a.position-change-cover-image{
+	top: 55px;
+	display: none;
+}
+#buddypress #item-header{
+	@media screen and (min-width: 1220px){
+		a.position-change-cover-image{
+			display: flex;
+		}
+		.header-cover-img{
+			display: block;
+		}
+		#header-cover-image{
+			background: none;
+		}
+	}
+}
 #item-header-avatar a.link-change-profile-image {
 	top: 100px;
 	left: 50%;
@@ -307,7 +325,8 @@ body.register .buddypress-wrap .page ul {
 }
 
 #header-cover-image:hover a.link-change-cover-image,
-#item-header-avatar:hover a.link-change-profile-image {
+#item-header-avatar:hover a.link-change-profile-image,
+#header-cover-image:hover a.position-change-cover-image {
 	opacity: 1;
 }
 
