--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -27,7 +27,37 @@
 	top: 0;
 	width: 100%;
 	z-index: 1;
+	overflow: hidden;
+	.header-cover-img{
+		max-width: 100%;
+		min-width: 100%;
+		height: auto;
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: none;
+	}
+	.header-cover-reposition-wrap{
+		overflow: hidden;
+		height: 100%;
+		display: none;
+		width: 100%;
+		&> .button{
+			position: absolute;
+			top: 5px;
+			right: 0;
+			& + a.button.small{
+				right: 95px
+			}
+		}
+		img{
+			max-width: 100%;
+			perspective: none !important;
+			backface-visibility: initial !important;
+		}
+	}
 }
+
 
 #item-header-cover-image {
 	margin-bottom: 1em;
@@ -55,6 +85,61 @@
 	min-width: 0;
 }
 
+
 /*
 * end cover photo block
 */
+
+/*
+* Cover photo cropper
+*/
+body.guillotine-dragging, body.guillotine-dragging * {
+	cursor: move !important;
+	cursor: -webkit-grabbing !important;
+	cursor:    -moz-grabbing !important;
+	cursor:         grabbing !important;
+	cursor: grabbing, move;  /* IE hack */
+  }
+  
+  .guillotine-window {
+	display: block;
+	position: relative;
+	overflow: hidden;
+	cursor: move;
+	cursor: -webkit-grab;
+	cursor:    -moz-grab;
+	cursor:         grab;
+	cursor: grab, move;  /* IE hack */
+  }
+  
+  .guillotine-canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	text-align: center;
+	margin: 0 !important;
+	padding: 0 !important;
+	border: none !important;
+	> * {
+		position: absolute;
+		top: 0;
+		left: 0;
+		max-width: none;
+		max-height: none;
+		width: 100%;
+		height: 100%;
+		margin: 0 !important;
+		padding: 0 !important;
+		border: none !important;
+	}
+  }
+  
+  .guillotine-canvas 
+  
+  .guillotine-sample {
+	position: absolute !important;
+	top: -100000px     !important;
+	left: -100000px    !important;
+	width: auto        !important;
+	height: auto       !important;
+}
