#561 - fixed background issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -314,7 +314,7 @@ body.register .buddypress-wrap .page ul {
 			display: block;
 		}
 		#header-cover-image{
-			background: none;
+			background-image: none;
 		}
 	}
 }
